[project]
name = "dyacon"
version = "0.0.9"
authors = [{ name = "Aleksei Morozov", email = "morozov6420@gmail.com" }]
description = "Yaml config package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["python-dotenv", "pyyaml"]


[project.optional-dependencies]
test = ["pytest"]
google = ["google-cloud-secret-manager"]
lint = ["black"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/morozov6420/dyacon"

[tool.black]
line-length = 79
skip-string-normalization = 1
